prometheus/yaml/prometheus-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      name: prometheus
      labels:
        app: prometheus
    spec:
      containers:
      - name: prometheus
        image: prom/prometheus:v2.1.0
        args:
        - --config.file=/mnt/etc/prometheus.yml
        - --storage.tsdb.retention=24h
        - --web.external-url=$(EXTERNAL_URL)/prometheus
        ports:
        - containerPort: 9090
        volumeMounts:
        - name: config-volume
          mountPath: /mnt/etc/
        - name: data-volume
          mountPath: /mnt/data/
        - name: rules-volume
          mountPath: /etc/prometheus-rules
      volumes:
      - name: config-volume
        configMap:
          name: prometheus-config
      - name: data-volume
        emptyDir: {}
      - name: rules-volume
        configMap:
          name: prometheus-rules
